test-suite/tests/fail/ui/states/conflicting_assert_reject.stderr
error: rejected state cannot also be asserted
 --> tests/fail/ui/states/conflicting_assert_reject.rs:8:32
  |
8 |     #[stated(assert(A), reject(A))]
  |                                ^
